20 Apr 2006: Wouter
	- Unittest of base 32 encoding. 
	- unittest start for iterated hash.

19 Apr 2006: Wouter
	- port fix base10 in zonec conv short from 2_2 branch to trunk.
	  and conv byte, algo, certificate, long.
	- configure option to enable NSEC3 (--enable-nsec3) support.
	- from Ben Laurie's NSEC3 patch, loaned the parse code,
	  base32 conversion code and iterated_hash. 
	  With some small modifications. The type rrdescriptors are 
	  indexed by value below SPF, and in 
	  rdata_wireformat_to_rdata_atoms BINARYWITHLENGTH checks
	  for end of buffer. Also parser checks for '-' salt.
	  Some layout (spaces after ,s). And NSEC3 define is used.
	  strtol used for iterations is base 10.
	- moved rrtype descriptor table sanity check to unittest.

18 Apr 2006: Wouter
	- Fixed check for SOA IN, bad ntohs in the check.
	- minimum timeout also enforced for very low expire times.
	- report the actual used length of the sockaddr to sento
	  for FreeBSD.

7 Apr 2006: Wouter
	- modified the kill_nsd tpkg so that it waits up to 10x5 secs
	  for nsd to make the pid file, and it wait up to 10x5 secs for
	  nsd to exit after the kill signal is given.
	- xfrd checks on startup if there is trailing garbage in the
	  diff file, left there by a previous xfrd killed in action.
	  It then snips off any partial parts, so service can resume.
	  Also the difffile_skip pos is set before any partial record there.
	- first version of nsd-patch; reads db and ixfrs and updates zones.
	- moved print_rdata from nsd-xfer to rdata.h to share code.
	- moved print_rr from nsd-xfer to util.h to share code.

6 Apr 2006: Wouter
	- notify handler passes acl number that matches to xfrd.
	- xfrd keeps a next_master for a zone, and sets it after notify.
	  when notified nsd will try to contact the master that sent
	  the notify, if send from an address that is both in acl
	  allow-notify and request-xfr.
	- xfrd closes its tcp and udp sockets on exit.