@@ -1,6 +1,7 @@
 20 Apr 2006: Wouter
 	- Unittest of base 32 encoding. 
 	- unittest start for iterated hash.
+	- delete zparser_conv_long, not used, not needed
 
 19 Apr 2006: Wouter
 	- port fix base10 in zonec conv short from 2_2 branch to trunk.
